--- a/yt_parser/requirements.txt
+++ b/yt_parser/requirements.txt
@@ -2,3 +2,11 @@ python-dotenv
 youtube-transcript-api
 google-api-python-client
 pytube
+flask
+fastapi
+uvicorn
+pydantic
+nltk
+transformers
+torch
+boto3
